fix custom font menus in dark mode

--- a/src/containers/confirmation.css
+++ b/src/containers/confirmation.css
@@ -19,6 +19,7 @@
     outline-style: solid;
     overflow: hidden;
     position: relative;
+    color: black;
 }
 
 .header {
